--- a/lecture4.tex
+++ b/lecture4.tex
@@ -17,7 +17,7 @@
             \begin{align*}
                 y''(x) + p(x)y'(x) + q(x)y(x) = 0
             \end{align*}
-            est dire EDL2 homogène.
+            est dite EDL2 homogène.
  
         \end{definition}
         
@@ -37,8 +37,8 @@
 
     \begin{parag}{EDL2 homogène à coefficients constants}
         \begin{align*}
-            y''(x) + py'(x) + qy(x) = 0, \; \; p, q \in  \mathbb{R} \\
-            y''(x) - (a + b)y'(x) + aby(x) = 0, \; \text{ où a, b sont des racines de l'équation } \lambda^2 + p \lambda + q = 0
+            y''(x) + py'(x) + qy(x) &= 0, \; \; p, q \in  \mathbb{R} \\
+            y''(x) - (a + b)y'(x) + aby(x) &= 0, \; \text{ où a, b sont des racines de l'équation } \lambda^2 + p \lambda + q = 0
         \end{align*}
         
         Par un changement de variables:
@@ -200,7 +200,7 @@
                      &= C_1 \frac{e^{-P(x)}}{v_1^2(x)} \; \; C_1 \in \mathbb{R}^*, C_1 = \pm C \\ 
                    c(x) &= \int C_1 \frac{e'{-P(x)}}{v_1^2(x)}dx + C_2
                    \\
-                        \implies v(x) = c(x)v_1(x) \text{ est une solution.}
+                   \implies v(x) &= c(x)v_1(x) \text{ est une solution.}
            \end{align*}
            Si on prend $C_1 = 1$ et $C_2 = 0$ on obtient $v_2(x)$ linéairement dépendante de $v_1(x)$ : 
            \begin{theoreme}
