--- a/style.sty
+++ b/style.sty
@@ -44,7 +44,6 @@
 
 \usepackage[super]{nth}  % for the \nth command
 \usepackage{centernot}  % for \centernot command
-\usepackage{emoji}  % absolutely mandatory
 
 % ===== Packages for useful environments =====
 \usepackage{tabularx}  % tabular environments which allow line breaking
@@ -78,8 +77,8 @@
 
 \usepackage{hyperref}
 \hypersetup{
-    pdftitle={Analyse II}
-    pdfpagemode=FullScreen,
+    pdftitle={Analyse II},
+    pdfpagemode=FullScreen
 }
 \usepackage{algorithm}
 \usepackage{algpseudocode}
@@ -196,7 +195,6 @@ linewidth=1pt]\begin{pro}}
 % ##### You need to compile a latex document using this style with LuaLaTeX, since it uses the        #####
 % ##### luacode package and the luaexec command.                                                      #####
 % #########################################################################################################
-% ##### You may require to install Mozilla Twemoji, see https://github.com/mozilla/twemoji-colr       #####
 % ##### You only need to download and execute the TTF file from their release section on GitHub.      #####
 % #########################################################################################################
 
@@ -680,7 +678,6 @@ linewidth=1pt]\begin{pro}}
     \setlength{\parskip}{\unchangedparskip}
     \directlua{insubparag = false}
 }
-a
 
 % ##### 05. Lecture headers #####
 % This provides:
