--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,8 @@ Prof. Lachowska Anna}
 \listoflectures
 
 \chapter{Introduction}
-Ce document a été écrit en utilisant Latex et vim.:w
+Ce document a été écrit en utilisant Latex et vim, le style utiliser de pour ce document a été directement tirée des note de Joachim Favre (avec quelque modifications) qui m'ai aussi aidé pour le setup vim donc merci, Pour ce qui est de comment prendre les notes je renvoie \url{https://castel.dev/post/lecture-notes-1/} qui explique vraiment bien. Ces notes sont prise durant le cours, mais avec quand même des rajoutes après, avec quelque complément etc.. La matière expliquée provient des cours et non de moi, les explications proviennent des livres, slide et des professeurs directement.\\
+J'ai aussi pas mal changé la façon dont je prenais mes notes durant le semestre, donc c'est normal que par exemple au début il n'y a que la théorie et non des exemples (il me semble que j'ai mis un résumé avec des exemples vers le milieu du semestre d'equa diff), il y a des peut être des fautes, donc, \important{attention}.
 
 \input{lecture1}
 \input{lecture2}
