--- a/lecture2.tex
+++ b/lecture2.tex
@@ -119,7 +119,7 @@
         Si juste on pose tout ça on obtient:
         \begin{align*} 
             v'\left(x\right) + p\left(x\right)v\left(x\right) &=  c_1v_1'\left(x\right) + c_2v_2'\left(x\right) + p_2\left(x\right)\left(c_1v_1\left(x\right) + c_2v_2\left(x\right)\right)\\
-            &= c_1\underbrace{\left(v_1'\left(x\right) + p\left(x\right)v_1\left(x\right)}_{f_1\left(x\right)} + c_2 \underbrace{\left(v_2'\left(x\right) + p\left(x\right)v_2\left(x\right)\right)}_{f_2\left(x\right)} =  c_1f_1\left(x\right) + c_2f_2\left(x\right)
+            &= c_1\underbrace{\left(v_1'\left(x\right) + p\left(x\right)v_1\left(x\right)\right)}_{f_1\left(x\right)} + c_2 \underbrace{\left(v_2'\left(x\right) + p\left(x\right)v_2\left(x\right)\right)}_{f_2\left(x\right)} =  c_1f_1\left(x\right) + c_2f_2\left(x\right)
         \end{align*}
     \end{subparag}
 \end{parag}
