--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,4 @@
+%!TEX program = lualatex
 \documentclass[11pt]{book}
 \usepackage[utf8]{inputenc}	% Para caracteres en español
 
@@ -43,6 +44,7 @@ J'ai aussi pas mal changé la façon dont je prenais mes notes durant le semestr
 \input{lecture22}
 \input{lecture23}
 \input{lecture24}
+\input{lecture25}
 
 \end{document}
 
