--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,7 @@ J'ai aussi pas mal changé la façon dont je prenais mes notes durant le semestr
 \input{lecture23}
 \input{lecture24}
 \input{lecture25}
+\input{lecture26}
 
 \end{document}
 
