--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,7 @@ J'ai aussi pas mal changé la façon dont je prenais mes notes durant le semestr
 \input{lecture24}
 \input{lecture25}
 \input{lecture26}
+\input{lecture27}
 
 \end{document}
 
