Updates from Overleaf

--- a/lecture24.tex
+++ b/lecture24.tex
@@ -82,6 +82,9 @@ L'idée ici c'est d'utiliser le faite que la dérivée de $\frac{1}{y}$ est $\fr
                 \implies \partial E \text{ est de mesure nulle }
             \end{align*}
          \end{definition}
+         \begin{align*}
+            
+         \end{align*}
     \end{subparag}
     
 \end{parag}
