--- a/lecture1.tex
+++ b/lecture1.tex
@@ -78,7 +78,7 @@
         
     \end{framedremark}
 \end{parag}
-section{Méthode de démonstration}
+\subsubsection{Introduction aux méthodes de démonstration}
 \begin{parag}{Introduction}
     \begin{definition}
         Une \important{proposition} est un énoncé qui peut être vrai ou faux.
